// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GlobalSearchInput /> snapshot should match snapshot 1`] = `
<SSRProvider>
  <GlobalSearchInput
    aria-label="global search"
    clearButtonAriaLabel="search"
  >
    <div
      className="md-global-search-input-wrapper"
      data-focus={false}
      onClick={[Function]}
    >
      <label
        htmlFor="test-ID"
      />
      <div>
        <Icon
          className="md-global-search-input-search"
          name="search"
          scale={18}
          strokeColor="var(--mds-color-theme-text-primary-normal)"
          weight="light"
        >
          <div
            aria-hidden="true"
            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-global-search-input-search md-icon-no-shrink"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-autoscale={false}
              data-scale={18}
              data-test="search"
              fill="currentColor"
              height="100%"
              style={
                {
                  "stroke": "var(--mds-color-theme-text-primary-normal)",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
      <div
        className="md-global-search-input-container"
      >
        <input
          aria-label="global search"
          disabled={false}
          id="test-ID"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="search"
          value=""
        />
      </div>
    </div>
  </GlobalSearchInput>
</SSRProvider>
`;

exports[`<GlobalSearchInput /> snapshot should match snapshot when filters are set 1`] = `
<SSRProvider>
  <GlobalSearchInput
    aria-label="global search"
    clearButtonAriaLabel="search"
    filters={
      [
        {
          "term": "from",
          "translations": {
            "empty": "empty",
            "filterAdded": "filteradded",
            "filterRemoved": "filterremoved",
            "nonempty": "nonempty",
            "text": "text",
          },
          "value": "Joe",
        },
        {
          "term": "in",
          "translations": {
            "empty": "empty",
            "filterAdded": "filteradded",
            "filterRemoved": "filterremoved",
            "nonempty": "nonempty",
            "text": "text",
          },
          "value": "a space",
        },
      ]
    }
    value="From: someone"
  >
    <div
      className="md-global-search-input-wrapper"
      data-focus={false}
      onClick={[Function]}
    >
      <label
        htmlFor="test-ID"
      >
        nonempty, nonempty:
      </label>
      <div>
        <Icon
          className="md-global-search-input-search"
          name="search"
          scale={18}
          strokeColor="var(--mds-color-theme-text-primary-normal)"
          weight="light"
        >
          <div
            aria-hidden="true"
            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-global-search-input-search md-icon-no-shrink"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-autoscale={false}
              data-scale={18}
              data-test="search"
              fill="currentColor"
              height="100%"
              style={
                {
                  "stroke": "var(--mds-color-theme-text-primary-normal)",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
      <div
        className="md-global-search-input-container"
      >
        <div
          className="md-global-search-input-search-context"
          key="from"
        >
          <p>
            text
          </p>
        </div>
        <div
          className="md-global-search-input-search-context"
          key="in"
        >
          <p>
            text
          </p>
        </div>
        <input
          aria-label="global search"
          disabled={false}
          id="test-ID"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder=""
          readOnly={false}
          type="search"
          value="From: someone"
        />
      </div>
      <ButtonSimple
        aria-label="search"
        className="md-global-search-input-clear"
        excludeFromTabOrder={false}
        onPress={[Function]}
        onPressStart={[Function]}
        preventFocusOnPress={true}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              aria-label="search"
              className="md-global-search-input-clear md-button-simple-wrapper"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <Icon
                name="cancel"
                scale={18}
              >
                <div
                  aria-hidden="true"
                  className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-autoscale={false}
                    data-scale={18}
                    data-test="cancel"
                    fill="currentColor"
                    height="100%"
                    style={{}}
                    viewBox="0, 0, 32, 32"
                    width="100%"
                  />
                </div>
              </Icon>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </div>
  </GlobalSearchInput>
</SSRProvider>
`;

exports[`<GlobalSearchInput /> snapshot should match snapshot when searching 1`] = `
<SSRProvider>
  <GlobalSearchInput
    aria-label="global search"
    clearButtonAriaLabel="search"
    searching={true}
  >
    <div
      className="md-global-search-input-wrapper"
      data-focus={false}
      onClick={[Function]}
    >
      <label
        htmlFor="test-ID"
      />
      <div>
        <Icon
          className="md-global-search-input-search"
          name="spinner"
          scale={18}
          strokeColor="var(--mds-color-theme-text-primary-normal)"
          weight="light"
        >
          <div
            aria-hidden="true"
            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-global-search-input-search md-icon-no-shrink"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-autoscale={false}
              data-scale={18}
              data-test="spinner"
              fill="currentColor"
              height="100%"
              style={
                {
                  "stroke": "var(--mds-color-theme-text-primary-normal)",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
      <div
        className="md-global-search-input-container"
      >
        <input
          aria-label="global search"
          disabled={false}
          id="test-ID"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="search"
          value=""
        />
      </div>
    </div>
  </GlobalSearchInput>
</SSRProvider>
`;

exports[`<GlobalSearchInput /> snapshot should match snapshot with className 1`] = `
<SSRProvider>
  <GlobalSearchInput
    aria-label="global search"
    className="example-class"
    clearButtonAriaLabel="search"
  >
    <div
      className="example-class md-global-search-input-wrapper"
      data-focus={false}
      onClick={[Function]}
    >
      <label
        htmlFor="test-ID"
      />
      <div>
        <Icon
          className="md-global-search-input-search"
          name="search"
          scale={18}
          strokeColor="var(--mds-color-theme-text-primary-normal)"
          weight="light"
        >
          <div
            aria-hidden="true"
            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-global-search-input-search md-icon-no-shrink"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-autoscale={false}
              data-scale={18}
              data-test="search"
              fill="currentColor"
              height="100%"
              style={
                {
                  "stroke": "var(--mds-color-theme-text-primary-normal)",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
      <div
        className="md-global-search-input-container"
      >
        <input
          aria-label="global search"
          disabled={false}
          id="test-ID"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="search"
          value=""
        />
      </div>
    </div>
  </GlobalSearchInput>
</SSRProvider>
`;

exports[`<GlobalSearchInput /> snapshot should match snapshot with id 1`] = `
<SSRProvider>
  <GlobalSearchInput
    aria-label="global search"
    clearButtonAriaLabel="search"
    id="example-id"
  >
    <div
      className="md-global-search-input-wrapper"
      data-focus={false}
      id="example-id"
      onClick={[Function]}
    >
      <label
        htmlFor="example-id"
      />
      <div>
        <Icon
          className="md-global-search-input-search"
          name="search"
          scale={18}
          strokeColor="var(--mds-color-theme-text-primary-normal)"
          weight="light"
        >
          <div
            aria-hidden="true"
            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-global-search-input-search md-icon-no-shrink"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-autoscale={false}
              data-scale={18}
              data-test="search"
              fill="currentColor"
              height="100%"
              style={
                {
                  "stroke": "var(--mds-color-theme-text-primary-normal)",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
      <div
        className="md-global-search-input-container"
      >
        <input
          aria-label="global search"
          disabled={false}
          id="example-id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="search"
          value=""
        />
      </div>
    </div>
  </GlobalSearchInput>
</SSRProvider>
`;

exports[`<GlobalSearchInput /> snapshot should match snapshot with style 1`] = `
<SSRProvider>
  <GlobalSearchInput
    aria-label="global search"
    clearButtonAriaLabel="search"
    style={
      {
        "color": "pink",
      }
    }
  >
    <div
      className="md-global-search-input-wrapper"
      data-focus={false}
      onClick={[Function]}
      style={
        {
          "color": "pink",
        }
      }
    >
      <label
        htmlFor="test-ID"
      />
      <div>
        <Icon
          className="md-global-search-input-search"
          name="search"
          scale={18}
          strokeColor="var(--mds-color-theme-text-primary-normal)"
          weight="light"
        >
          <div
            aria-hidden="true"
            className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-global-search-input-search md-icon-no-shrink"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-autoscale={false}
              data-scale={18}
              data-test="search"
              fill="currentColor"
              height="100%"
              style={
                {
                  "stroke": "var(--mds-color-theme-text-primary-normal)",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
      <div
        className="md-global-search-input-container"
      >
        <input
          aria-label="global search"
          disabled={false}
          id="test-ID"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="search"
          value=""
        />
      </div>
    </div>
  </GlobalSearchInput>
</SSRProvider>
`;
